kube/argocd-ingress.yml
apiVersion: networking.k8s.io/v1                                                                                               
kind: Ingress                                                                                                                  
metadata:                                                                                                                      
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: argocd.int64.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
    - secretName: tls-argocd-int64dev
      hosts:
        - argocd.int64.dev
